conformance/tests/udproute-tcproute-listener-merge.yaml
apiVersion: v1
kind: Service
metadata:
  name: udp-tcp-echo
  namespace: gateway-conformance-infra
  labels:
    app: udp-tcp-echo
spec:
  selector:
    app: udp-tcp-echo
  ports:
    - name: udp
      protocol: UDP
      port: 8080
      targetPort: 8080
    - name: tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udp-tcp-echo
  namespace: gateway-conformance-infra
  labels:
    app: udp-tcp-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udp-tcp-echo
  template:
    metadata:
      labels:
        app: udp-tcp-echo
    spec:
      containers:
        - name: udp-tcp-echo
          image: registry.k8s.io/gateway-api/echo-basic:v1.5.1
          imagePullPolicy: IfNotPresent
          env:
            - name: UDP_ECHO_SERVER
              value: "1"
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: udp-tcp-echo
          ports:
            - containerPort: 8080
              protocol: UDP
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 10m
---
# Two listeners share the same port: one UDP, one TCP.
# An implementation MAY listen for both UDP and TCP traffic on the same Listener
# port. UDP traffic on this port MUST be routed via the UDPRoute and TCP traffic
# on this port MUST be routed via the TCPRoute.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udp-tcp-listener-merge-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: udp
      protocol: UDP
      port: 5300
      allowedRoutes:
        kinds:
          - kind: UDPRoute
    - name: tcp
      protocol: TCP
      port: 5300
      allowedRoutes:
        kinds:
          - kind: TCPRoute
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: UDPRoute
metadata:
  name: udp-route-listener-merge
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: udp-tcp-listener-merge-gateway
      sectionName: udp
  rules:
    - backendRefs:
        - name: udp-tcp-echo
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-route-listener-merge
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: udp-tcp-listener-merge-gateway
      sectionName: tcp
  rules:
    - backendRefs:
        - name: udp-tcp-echo
          port: 8080
